fixed border-top innerdiv not showing

--- a/css/background.css
+++ b/css/background.css
@@ -51,7 +51,7 @@ position:relative;
 }
 #innerdiv {
 position:absolute;
-top:-130px;
+top:-129px;
 left:-146px;
 width:1280px;
 height:1200px;
